--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,23 @@
 /*  your css code here. If applicable */
+*{
+	margin:0px;
+	padding:0px;
+}
+#body{
+	width:500px;
+	height:1400px;
+	background:grey;
+	
+}
+{
+	width:100%;
+	display: flex;
+	justifycontent:center;
+	alignitems:center;
+}
+	
+	
+
+
+
+
